/*
 * $Id: ChangeLog,v 1.3215 2004/07/26 20:56:36 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-07-26 13:08 UTC+0100 Patrick Mast <patrick@xHarbour.com>
  * tests/extend.prg
    * small enhancement in sample

2004-07-26 13:55 UTC-0800 Ron Pinkas <ron at xharbour.com>
  * include/hbclass.ch
    * Minor correction

  * source/rtl/tclass.prg
    + Added implementation of Class(y) compatible class for native type ARRAY

  * tests/enbltype.prg
    * Greatly enhanced to demonstrate base class for native arrays.

2004-07-26 03:36 UTC-0800 Ron Pinkas <ron at xharbour.com>
  * source/rtl/objfunc.prg
    * Some correction of iconsistencies.

  * include/classes.h
  * source/vm/classes.c
  * source/vm/hvm.c
    + Added support for using native types as objects.

  * source/rtl/tclass.prg
    + Added basic classes definitions for native types.

  * include/hbclass.ch
    + Added support for new syntax:
      EXTEND [TYPE] ARRAY|BLOCK|CHARACTER|DATE|LOGICAL|NUMERIC|POINTER WITH METHOD <SomeFunc>
      EXTEND [TYPE] ARRAY|BLOCK|CHARACTER|DATE|LOGICAL|NUMERIC|POINTER WITH MESSAGE <SomeMessage> METHOD <SomeFunc>

      OVERRIDE METHOD <SomeMethod> [IN] CLASS <SomeClass> WITH [METHOD] <SomeFunc> [SCOPE <Scope>]
      EXTEND CLASS <SomeClass> WITH METHOD <SomeFunc>
      EXTEND CLASS <SomeClass> WITH METHOD <SomeFunc>
      EXTEND CLASS <SomeClass> WITH MESSAGE <SomeMessage> METHOD <SomeFunc>

  + tests/enbltype.prg
    + New sample to demonstrate enabling and utilization of native types as extendable objects.

  + tests/exttype.prg
     + New sample to demonstrate extension of native types with OUT using any class deinitions.

  + tests/extend.prg
     + New sample to demonstrate how to extend normal classes as well as native type base classes.

  + tests/override.prg