@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.3215 2004/07/26 20:56:36 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.3216 2004/07/26 21:11:00 patrickmast Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,14 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+2004-07-26 23:30 UTC-0300 Luiz Rafael Culik <culikr at brturbo.com
+  + contrib/pdflib/pdf1.prg
+  + contrib/pdflib/pdfhbdocs.prg
+    ! minor fix
+  * contrib/hbzlib/zipnew.c
+    contrib/hbzlib/zip.c
+    !added hb_unzipallfile() function to extract all files
+
 
 2004-07-26 13:08 UTC+0100 Patrick Mast <patrick@xHarbour.com>
   * tests/extend.prg
